argocd/apps/connectivity/gateway-api/gateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gateway
  namespace: connectivity
spec:
  gatewayClassName: cilium
  listeners:
    - name: https-internal
      port: 443
      protocol: HTTPS
      hostname: "*.ditc.lcldns"
      tls:
        mode: Terminate
        certificateRefs:
          - name: ditc-certificate-secret
            kind: Secret

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gateway
  namespace: connectivity
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
