argocd/apps/connectivity/gateway-api/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-internal-routes
  namespace: observability
spec:
  parentRefs:
    - name: tls-gateway
      namespace: connectivity
  hostnames:
    - "grafana.ditc.lcldns"
  rules:
    - backendRefs:
        - kind: Service
          name: kube-prometheus-stack-grafana
          namespace: observability
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-internal-routes
  namespace: argocd
spec:
  parentRefs:
    - name: tls-gateway
      namespace: connectivity
  hostnames:
    - "argocd.ditc.lcldns"
  rules:
    - backendRefs:
        - kind: Service
          name: argocd-server
          namespace: argocd
          port: 80
